# heavy-chain

./: .env.example  .env.production.example  .gitignore  ALL_DONE.md  ALL_FEATURES_CHECK.md  COMPLETE_SUCCESS.md  CONTRIBUTING.md  DEBUG_ERROR.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOY_REMAINING_FUNCTIONS.md  Dockerfile.runway-mcp-bridge  EXECUTE_NOW.md  FINALLY_DONE.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  FIX_ERROR.md  GALLERY_NAVIGATION_IMPROVEMENTS.md  GEMINI_MIGRATION_COMPLETE.md  GOAL.md  HeavyChain_Requirements (3).md  IMAGE_ANALYSIS_FEATURE.md  LICENSE  NEXT_STEPS.md  PROFILE_README_TEMPLATE.md  PROJECT_DESIGN.md  QUICK_DEPLOY.md  QUICK_SETUP.md  QUICK_START.md  README.md  RELIABILITY_IMPROVEMENTS.md  SETUP.md  SETUP_CHECKLIST.md  SETUP_STATUS_REPORT.md  SET_GEMINI_MODEL.md  SIMPLE_DEPLOY.md  STATE.md  SUPABASE_SETUP.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  (+19 more)
docs/: edge-function-test-matrix.md  g611-beta-scenario-qa-2026-06-26.md  g612-competitor-positioning-2026-06-26.md  g614-operations-runbook-2026-06-26.md  g619-real-beta-evidence-packet-2026-06-30.md  g620-security-operations-runbook-2026-06-30.md  g632-incident-response-drill-2026-07-01.md  g633-production-scale-alerting-plan-2026-07-01.md  generation-quality-rubric-2026-06-26.md  h601-h602-operator-decision-checklist-2026-07-04.md  h601-h602-operator-readback-template-2026-07-04.md  h602-billing-readiness-operator-runbook-2026-06-30.md  launch-operations-runbook-2026-06-25.md  legal-safety-decision-packet-2026-06-26.md  lightchain-full-parity-audit-2026-06-22.md  release-checklist.md  (+20 more)
(+486 files in other folders)
