[project]
name = "social-flow"
version = "0.1.0"
description = "Core workflow for collecting, localizing, drafting, and publishing social posts with Google Sheets tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "google-genai>=1.0.0",
  "google-api-python-client>=2.169.0",
  "google-auth>=2.40.1",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "openai>=2.1.0",
  "playwright>=1.54.0",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "trafilatura>=2.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
social-flow = "social_flow.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
